# crossplatform-projects

./: .gitmodules
Lab1/: CMakeLists.txt  compile_commands.json
Lab1/crossplatform_hello_world/: CMakeLists.txt  main.cpp
Lab1/libmyprint/libmyprint/: CMakeLists.txt  libmyprint.cpp
crossplatform_hello_world/: compile_commands.json
crossplatform_hello_world/crossplatform_hello_world/: main.cpp
crossplatform_hello_world/libmyprint/: CMakeLists.txt
crossplatform_hello_world/libmyprint/libmyprint/: libmyprint.cpp  libmyprint.hpp
desktop_charts/: CMakeLists.txt
desktop_charts/desktop_charts/: CMakeLists.txt  main.cpp
ipc_demo/: CMakeLists.txt  linux-clang-toolchain.cmake
ipc_demo/ipc_demo/: CMakeLists.txt  main.cpp
ipc_demo/libmycommon/libmycommon/: mycommon.hpp
ipc_demo/libmysem/: CMakeLists.txt
ipc_demo/libmysem/libmysem/: CMakeLists.txt  mysem.cpp  mysem.hpp
ipc_demo/libmyshm/: CMakeLists.txt
ipc_demo/libmyshm/libmyshm/: CMakeLists.txt  myshm.cpp  myshm.hpp  myshm.tpp
ipc_demo/libmythread/: CMakeLists.txt
ipc_demo/libmythread/libmythread/: CMakeLists.txt  mythread.cpp
process_spawner/: CMakeLists.txt  windows-clang-toolchain.cmake
process_spawner/files/: repeat_hello.bat  repeat_hello.cpp  repeat_hello.sh
process_spawner/libmycommon/: CMakeLists.txt
process_spawner/libmycommon/libmycommon/: mycommon.hpp
process_spawner/libmypspawner/: CMakeLists.txt
process_spawner/libmypspawner/libmypspawner/: CMakeLists.txt  mypspawner.cpp  mypspawner.hpp
process_spawner/process_spawner/: CMakeLists.txt  main.cpp
serial_reader/: CMakeLists.txt  gen_compile_commands.sh
serial_reader/libmycommon/libmycommon/: CMakeLists.txt
serial_reader/libmyhttp/: CMakeLists.txt
serial_reader/libmyhttp/libmyhttp/: CMakeLists.txt  myhttp.cpp  myhttp.hpp
serial_reader/libmyserial/: CMakeLists.txt
serial_reader/libmyserial/libmyserial/: CMakeLists.txt  myserial.cpp
serial_reader/serial_reader/: CMakeLists.txt  main.cpp
serial_writer/: CMakeLists.txt
serial_writer/libmyhttp/libmyhttp/: CMakeLists.txt  myhttp.cpp  myhttp.hpp
serial_writer/libmyjson/: CMakeLists.txt
serial_writer/libmyjson/libmyjson/: CMakeLists.txt  myjson.cpp  myjson.hpp
serial_writer/libmyprint/libmyprint/: CMakeLists.txt  myprint.cpp  myprint.hpp
serial_writer/libmyserial/libmyserial/: myserial.cpp  myserial.hpp
serial_writer/serial_writer/: CMakeLists.txt  main.cpp
web_charts/: package-lock.json  package.json
web_charts/src/: App.vue
